--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Web</title>
   <base href="/">
-
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Web</title>
+
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
