--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Web</title>
+<script type="application/javascript" src="path-to-jquery.js"></script>
+
+  <title>CGStore</title>
+
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
